--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <link rel="stylesheet" href="styles.css">
-    <h1>MinMood</h1>
+    <h1>MiniMood</h1>
     <p>coming soon...</p>
     <button id="popupBtn">Get started ✨</button>
 
