--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniMood</title>
 
+    <!-- Standard-Favicon -->
+<link rel="icon" type="image/png" href="favicon_standard.png">
+
+<!-- Für iOS- und Android-Home-Screen-Icons -->
+<link rel="apple-touch-icon" href="favicon.png">
+
+<!-- Für ältere Browser, optional -->
+<link rel="shortcut icon" href="favicon_standard.png" type="image/x-icon">
+
 </html>
+
 
 
 </style>
