--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MiniMood</title>
+    <title>Minimood</title>
 
     <!-- Vollbildmodus iOS & Android -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    
+
     <h1>MiniMood</h1>
     <p>coming soon...</p>
     <button id="popupBtn">Get started ✨</button>
