--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Für ältere Browser -->
     <link rel="shortcut icon" href="favicon_standard.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.0">
 </head>
 
 <body>
