--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Minimood</title>
 
     <!-- Vollbildmodus iOS & Android -->
@@ -20,6 +20,9 @@
     <link rel="shortcut icon" href="favicon_standard.png" type="image/x-icon">
 
     <link rel="stylesheet" href="styles.css?v=1.0">
+
+    
+
 </head>
 
 <body>
@@ -27,15 +30,24 @@
     <h1>My Minimood</h1>
 <p>Turn counting school hours into a fun activity!</p>
 
-<div class="addbtncon">
-    <img src="favicon_standard.png" alt="">
+<div class="container-row">
 
-    <a href="liste.html">
-  <button>+</button>
-</a>
+    <div class="fakebtn2">
+      <img src="favicon_standard.png" alt="">
+      <button>+</button>
+    </div>
 
-</div>
+    <div class="addbtncon">
+      <img src="favicon_standard.png" alt="">
+      <a href="liste.html"><button>+</button></a>
+    </div>
 
+    <div class="fakebtn">
+      <img src="favicon_standard.png" alt="">
+      <button>+</button>
+    </div>
 
+  </div>
+</body>
 
 </html>
