--- a/liste.html
+++ b/liste.html
@@ -2,10 +2,11 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Moodlist</title>
 
   <link rel="stylesheet" href="liste.css">
+  
 
 
 </head>
