--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <meta name="theme-color" content="#121212">
 
     <!-- Standard-Favicon -->
-    <link rel="icon" type="image/png" href="favicon_standard.png">
+    <link rel="icon" type="image/png" href="img/favicon_standard.png">
 
     <!-- Für iOS- und Android-Home-Screen-Icons -->
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="apple-touch-icon" href="img/favicon.png">
 
     <!-- Für ältere Browser -->
-    <link rel="shortcut icon" href="favicon_standard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon_standard.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="styles.css?v=1.2">
+    <link rel="stylesheet" href="pageHome/styles.css?v=1.3">
 
 
 
@@ -37,17 +37,17 @@
 <div class="container-row">
 
     <div class="fakebtn2">
-      <img src="favicon_standard.png" alt="">
+      <img src="img/favicon_standard.png" alt="">
       <button>+</button>
     </div>
 
 <div class="addbtncon">
-  <img src="favicon_standard.png" alt="">
+  <img src="img/favicon_standard.png" alt="">
   <button id="openPopup">+</button>
 </div>
 
     <div class="fakebtn">
-      <img src="favicon_standard.png" alt="">
+      <img src="img/favicon_standard.png" alt="">
       <button>+</button>
     </div>
  </div> 
@@ -61,7 +61,7 @@
     <button id="saveName">Continue</button>
   </div>
 
-<script src="popup.js"></script>
+<script src="pageHome/popup.js"></script>
 
 </div>
 </body>
