--- a/pageListe/liste.html
+++ b/pageListe/liste.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Minimood</title>
 
-  <link rel="stylesheet" href="liste.css?v=1.2">
+  <link rel="stylesheet" href="liste.css?v=1.3">
   
     <!-- Vollbildmodus iOS & Android -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,20 +13,20 @@
     <meta name="theme-color" content="#121212">
 
     <!-- Standard-Favicon -->
-    <link rel="icon" type="image/png" href="favicon_standard.png">
+    <link rel="icon" type="image/png" href="../img/favicon_standard.png">
 
     <!-- Für iOS- und Android-Home-Screen-Icons -->
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="apple-touch-icon" href="../img/favicon.png">
 
     <!-- Für ältere Browser -->
-    <link rel="shortcut icon" href="favicon_standard.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon_standard.png" type="image/x-icon">
 
 </head>
 
 <body>
 
     <div class="topbar">
-<a href="index.html">
+<a href="../index.html">
           
 <button>&times;</button>
     </a>
@@ -34,7 +34,7 @@
 
     
     <div class="heading">
-  <h1 id="moodHeading">My Moodlist</h1>
+  <h1 id="moodHeading">Witzelsite</h1>
 </div>
 
 <script>
@@ -42,6 +42,8 @@ window.addEventListener("DOMContentLoaded", () => {
   const savedName = localStorage.getItem("moodlistName");
   if (savedName) {
     document.getElementById("moodHeading").innerText = savedName;
+
+     document.title = "Minimood " + savedName;
   }
 });
 </script>
