--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
 
 </div>
 
+
+  <button id="hapticBtn">Fühle Haptik</button>
+
+  <script>
+    const btn = document.getElementById("hapticBtn");
+    btn.addEventListener("click", () => {
+      if (navigator.vibrate) {
+        navigator.vibrate(50); // 50ms Vibration
+      } else {
+        console.log("Haptik nicht unterstützt");
+      }
+    });
+  </script>
+
+
 <p class="versionsnummer">v1 15.2</p>
 
 </body>
