--- a/index.html
+++ b/index.html
@@ -19,42 +19,14 @@
     <!-- Für ältere Browser -->
     <link rel="shortcut icon" href="img/favicon_standard.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="pageHome/styles.css?v=1.6">
+    <link rel="stylesheet" href="pageHome/styles.css?v=1.7">
 
-    <style>
-        /* Verstecktes Element für iOS-Haptik */
-        #haptic-checkbox, #haptic-label {
-            position: absolute;
-            opacity: 0;
-            height: 0;
-            width: 0;
-            overflow: hidden;
-            pointer-events: none;
-        }
-        /* Stil für Zeit-Eingabefelder */
-        .time-inputs {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 15px;
-        }
-        .time-inputs label {
-            font-size: 16px;
-            color: #fff;
-        }
-        .time-inputs input[type="time"] {
-            padding: 8px;
-            font-size: 16px;
-            border: 1px solid #444;
-            border-radius: 5px;
-            background: #222;
-            color: #fff;
-            width: 100%;
-            box-sizing: border-box;
-        }
-    </style>
+
 </head>
 <body>
+
+    <p class="versionsnummer">v1 16.3 (security-beta)</p>
+
     <div class="heading">
         <h1>My Minimood</h1>
     </div>
@@ -62,20 +34,14 @@
     <p>Turn counting school hours into a fun activity!</p>
 
     <div class="container-row">
-        <div class="fakebtn2">
-            <img src="img/favicon_standard.png" alt="">
-            <button>+</button>
-        </div>
+
 
         <div class="addbtncon">
             <img src="img/favicon_standard.png" alt="">
             <button id="openPopup">+</button>
         </div>
 
-        <div class="fakebtn">
-            <img src="img/favicon_standard.png" alt="">
-            <button>+</button>
-        </div>
+
     </div>
 
     <!-- Popup -->
@@ -94,50 +60,10 @@
         </div>
     </div>
 
-    <script>
-        // Funktion zum Erkennen von iOS
-        function isIOS() {
-            return /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-        }
-
-        // Initialisiere iOS-Haptik-Element (nur bei iOS)
-        let hapticLabel = null;
-        if (isIOS()) {
-            const checkbox = document.createElement('input');
-            checkbox.type = 'checkbox';
-            checkbox.id = 'haptic-checkbox';
-            checkbox.setAttribute('switch', '');
-            checkbox.style.display = 'none';
-            document.body.appendChild(checkbox);
-
-            hapticLabel = document.createElement('label');
-            hapticLabel.htmlFor = 'haptic-checkbox';
-            hapticLabel.style.display = 'none';
-            document.body.appendChild(hapticLabel);
-        }
-
-        // Funktion für haptisches Feedback
-        function triggerHaptic() {
-            if (isIOS() && hapticLabel) {
-                hapticLabel.click();
-            } else if ('vibrate' in navigator) {
-                navigator.vibrate(50);
-            }
-        }
-
-        // Event-Listener für den Button (falls benötigt)
-        const hapticTestBtn = document.getElementById('hapticTestBtn');
-        if (hapticTestBtn) {
-            hapticTestBtn.addEventListener('click', triggerHaptic);
-            hapticTestBtn.addEventListener('touchend', (e) => {
-                e.preventDefault();
-                triggerHaptic();
-            });
-        }
-    </script>
+    <script src="haptic.js"></script>
 
     <script src="pageHome/popup.js"></script>
 
-    <p class="versionsnummer">v1 16.2 (beta)</p>
+
 </body>
 </html>
