--- a/list/index.html
+++ b/list/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Minimood</title>
 
-    <link rel="stylesheet" href="liste.css?v=1.6">
+    <link rel="stylesheet" href="liste.css?v=1.7">
     
     <!-- Vollbildmodus iOS & Android -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -43,65 +43,9 @@
 
  
 
-<script>
-    window.addEventListener("DOMContentLoaded", () => {
-        const savedName = localStorage.getItem("moodlistName");
-        const specialMode = localStorage.getItem("specialMode") === "true";
-        const buttonCount = parseInt(localStorage.getItem("buttonCount")) || 18;
-
-        const heading = document.getElementById("moodHeading");
-        const calendar = document.getElementById("calendar");
-
-        if (savedName) {
-            heading.innerText = savedName;
-            document.title = "Minimood " + savedName;
-        } else {
-            heading.innerText = "Witzeliste";
-            document.title = "Minimood Witzeliste";
-        }
-
-        if (specialMode) {
-            document.body.classList.add("secret-theme");
-        }
-
-        // Buttons dynamisch erzeugen
-        const buttons = [];
-        for (let i = 1; i <= buttonCount; i++) {
-            const button = document.createElement("button");
-            button.className = "day-btn";
-            button.innerText = i;
-            calendar.appendChild(button);
-            buttons.push(button);
-        }
-
-
-
-        // Klick-Logik
-        document.addEventListener("click", (e) => {
-            if (e.target.classList.contains("day-btn") && e.target.classList.contains("active")) {
-                const currentIndex = buttons.indexOf(e.target);
-
-                // Geklickter Button → grün
-                e.target.style.backgroundColor = "green";
-                e.target.classList.remove("active");
-                e.target.classList.add("clicked");
-
-                // Witz anzeigen
-                generateWitz();
-
-                // Nach 5 Minuten nächsten Button gelb machen
-
-            }
-        });
-    });
-</script>
+<script src="codeyellow.js"></script>
 
 <script src="witze.js"></script>
 
-
-<script src="witze.js"></script>
-
-
-    <script src="witze.js"></script>
 </body>
 </html>
