--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                 <label for="endTime">End Time:</label>
                 <input type="time" id="endTime" step="300" required>
             </div>
-            <button id="saveName">Continue</button>
+                <div class="exit">
+                    <button id="saveName">Continue</button>
+                </div>
+            
         </div>
     </div>
 
