--- a/list/index.html
+++ b/list/index.html
@@ -41,11 +41,12 @@
     <!-- Witz-Ausgabe -->
     <div id="witz-container"></div>
 
- 
+ <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
 <script src="codeyellow.js"></script>
 
 <script src="witze.js"></script>
+
 
 </body>
 </html>
